--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bull": "^3.18.0",
+    "do-wrapper": "^4.1.2",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
