--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "find-up": "^4.1.0",
     "rmrf": "^2.0.2",
     "simple-git": "^2.18.0",
+    "ssh-fingerprint": "^0.0.1",
     "styled-components": "^5.1.0",
     "tslib": "^1.12.0",
     "uuid": "^8.3.0"
