print packer output to std; fix droplet status polling

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
   },
   "plugins": [
     "react", 
-    "@typescript-eslint/eslint-plugin"
+    "@typescript-eslint/eslint-plugin",
+    "promise"
   ],
   "settings": {
     "react": {
@@ -30,6 +31,17 @@
     "@typescript-eslint/no-use-before-define": 0,
     "@typescript-eslint/no-inferrable-types": 0,
     "react/prop-types": 0,
-    "react/display-name": 0
+    "react/display-name": 0,
+    "promise/always-return": "error",
+    "promise/no-return-wrap": "error",
+    "promise/param-names": "error",
+    "promise/catch-or-return": "error",
+    "promise/no-native": "off",
+    "promise/no-nesting": "warn",
+    "promise/no-promise-in-callback": "warn",
+    "promise/no-callback-in-promise": "warn",
+    "promise/no-new-statics": "error",
+    "promise/no-return-in-finally": "warn",
+    "promise/valid-params": "warn"
   }
 }
