--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
     "file-loader": "^6.0.0",
     "http-proxy-middleware": "^1.0.3",
