--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "find-up": "^4.1.0",
+    "js-yaml": "^3.14.0",
     "node-fetch": "^2.6.0",
     "rmrf": "^2.0.2",
     "simple-git": "^2.18.0",
@@ -89,6 +90,7 @@
     "@types/enzyme": "^3.10.5",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.2",
+    "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.0.1",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.35",
